--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,7 +1,8 @@
 pluginManagement {
     includeBuild("../node_modules/@react-native/gradle-plugin")
 }
+plugins { id("com.facebook.react.settings") }
+extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autolinkLibrariesFromCommand() }
 rootProject.name = 'BgRecorder'
-include ':app', ':react-native-safe-area-context'
-project(':react-native-safe-area-context').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-safe-area-context/android')
+include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
