--- a/ios/BgRecorder/Info.plist
+++ b/ios/BgRecorder/Info.plist
@@ -34,6 +34,18 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
+	<!-- Camera permission for video recording -->
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs access to camera to record videos</string>
+	<!-- Microphone permission for audio recording -->
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app needs access to microphone to record audio with videos</string>
+	<!-- Photo Library permission for saving videos -->
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs access to photo library to save recorded videos</string>
+	<!-- Photo Library Add Usage for iOS 11+ -->
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>This app needs permission to save recorded videos to your photo library</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
