--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-google-mobile-ads": "^15.7.0",
+    "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
