--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <!-- Camera permission for video recording -->
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- Microphone permission for audio recording -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <!-- Storage permissions for saving videos -->
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
