--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -120,6 +120,9 @@ dependencies {
         implementation jscFlavor
     }
 
+    // Kotlin Coroutines for overlay functionality
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.google.firebase:firebase-config'
