--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.81.1",
+    "ffmpeg-kit-react-native": "^6.0.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
     "react-native-google-mobile-ads": "^15.7.0",
