--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ffmpeg-kit-react-native": "^6.0.2",
     "react": "19.1.0",
     "react-native": "0.81.1",
+    "react-native-fs": "^2.20.0",
     "react-native-google-mobile-ads": "^15.7.0",
     "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.5.2",
