--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -136,4 +136,5 @@ dependencies {
     implementation  'com.google.ads.mediation:unity:4.16.0.1'
     implementation  'com.google.ads.mediation:applovin:13.3.1.1'
     implementation 'com.google.ads.mediation:adcolony:4.8.0.0'
+    implementation 'androidx.compose.ui:ui-text:1.9.2'
 }
