--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -6,3 +6,6 @@ extensions.configure(com.facebook.react.ReactSettingsExtension){ ex -> ex.autoli
 rootProject.name = 'BgRecorder'
 include ':app'
 includeBuild('../node_modules/@react-native/gradle-plugin')
+include ":react-native-nitro-modules"
+// android/settings.gradle
+//project(":react-native-nitro-modules").projectDir = new File(rootProject.projectDir, "../modules/react-native-nitro-modules/android")
