--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-native-biometrics": "^3.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-google-mobile-ads": "^15.7.0",
+    "react-native-iap": "^14.4.11",
     "react-native-keychain": "^10.0.0",
+    "react-native-nitro-modules": "^0.29.8",
     "react-native-permissions": "^5.4.2",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-vector-icons": "^10.3.0",
