--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,10 +45,12 @@
       <activity
         android:name="boom.bvr.recorder.pro.MainActivity"
         android:label="@string/app_name"
+        android:screenOrientation="portrait"
         android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
         android:launchMode="singleTask"
         android:windowSoftInputMode="adjustResize"
-        android:exported="false">
+        android:exported="false"
+          tools:ignore="LockedOrientationActivity">
         <!-- No intent-filter here - only aliases will have launcher intent-filters -->
       </activity>
 
