--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-firebase/app": "^23.4.0",
+    "@react-native-firebase/crashlytics": "^23.4.0",
+    "@react-native-firebase/messaging": "^23.4.0",
     "@react-native-firebase/remote-config": "^23.4.0",
     "@react-native/new-app-screen": "0.81.1",
     "ffmpeg-kit-react-native": "^6.0.2",
